--- a/views/login.twig
+++ b/views/login.twig
@@ -172,7 +172,7 @@
                 <div class="form">
                     <form action="/iniciarSesion" method="post">
                     <label for="email"><strong>Correo Electrónico</strong></label>
-                    <input type="email" id="email" name="correo">
+                    <input type="email" id="email" name="correo_electronico">
                     <label for="password"><strong>Contraseña</strong></label>
                     <input type="password" id="password" name="contrasena">
                     <input type="submit" id="submit" value="Iniciar Sesión" class="bold-button">
