actualizacion de links

--- a/views/donacion.twig
+++ b/views/donacion.twig
@@ -202,17 +202,17 @@
         </div>
         <!-- Imagen 2 -->
         <div class="photo">
-           <img src="https://scontent.fcxl1-2.fna.fbcdn.net/v/t39.30808-6/397587005_10168545520300051_3189746164093342670_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeE1nRPT_zDjLP60QOIbNCtzNwCLcydxTBc3AItzJ3FMFwqT-9_0IPlmALiLxyDnhQvc9hKjq32E9d2aoFwQNIe7&_nc_ohc=W-4x0k_j8vsAX8Yur6_&_nc_ht=scontent.fcxl1-2.fna&oh=00_AfCgAgDZYbQGA_SXM9M3mU6tb6EidRdpNAy2UYAo4Z3PcA&oe=655B85E4">
+           <img src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/397587005_10168545520300051_3189746164093342670_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeE1nRPT_zDjLP60QOIbNCtzNwCLcydxTBc3AItzJ3FMFwqT-9_0IPlmALiLxyDnhQvc9hKjq32E9d2aoFwQNIe7&_nc_ohc=jSbhZGa-MRYAX91bFNJ&_nc_ht=scontent.ftij2-1.fna&oh=00_AfDc5H_8lfSjS0MsEmZzZJcH8vKHiBt760qCjI4xkqck0g&oe=656174A4">
         </div>
 
         <!-- Imagen 3 -->
         <div class="photo">
-             <img src="https://scontent.fcxl1-2.fna.fbcdn.net/v/t39.30808-6/346661607_912814933342105_4240990760163929716_n.jpg?stp=cp6_dst-jpg&_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeFZ9Zq3AqOpFakBmlFSmjaC_Qa3MTHiLCf9BrcxMeIsJyKYI9XlANsk0MLTHWeTsB5OquG6koPzhc9ZfwkHpkaO&_nc_ohc=m49JFhyQzY8AX8CjFPj&_nc_ht=scontent.fcxl1-2.fna&oh=00_AfCo6_Giu5cYLafGvyTSbDmLMXVYB0FAmnq4q6mjcadF5g&oe=655CA783">
+             <img src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/394039194_7334753729868441_1364563522588845236_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGA2lR65Ubj6wLjEIUNiW4XWoiUF_DO89haiJQX8M7z2MDkDiQEtX38CUHJb3Hn1CZiBDRude7c56vKCsNi7XuF&_nc_ohc=z3dWwbufUQYAX8TStgY&_nc_oc=AQnOPt6Nj0szTzbSFuIDnxttFsa-x3D5f0QWldElzJbhLlGOTd6kX6ViBy04jTAUyxY&_nc_ht=scontent.ftij2-1.fna&oh=00_AfDkyp9-AwCnEjL-UOrXR2gIotnJHxyo03oMr9oxB-y5Og&oe=6561DCCA">
         </div>
 
         <!-- Imagen 4 -->
         <div class="photo">
-             <img src="https://scontent.fcxl1-2.fna.fbcdn.net/v/t39.30808-6/394039194_7334753729868441_1364563522588845236_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGA2lR65Ubj6wLjEIUNiW4XWoiUF_DO89haiJQX8M7z2MDkDiQEtX38CUHJb3Hn1CZiBDRude7c56vKCsNi7XuF&_nc_ohc=TE5IH5VjupQAX9hhj8W&_nc_oc=AQnzl6kMi64TBRqRhV_NJsBRy8eS9LDdPSWkPAxcNtLoejyjkZArgFGjXnO4O6bMClQ&_nc_ht=scontent.fcxl1-2.fna&oh=00_AfDqqeProcFwvpX2tfX1pPspwyt3Yoi7xfpw0wHnh2N09w&oe=6555FF4A">
+             <img src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/346661607_912814933342105_4240990760163929716_n.jpg?stp=cp6_dst-jpg&_nc_cat=107&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeFZ9Zq3AqOpFakBmlFSmjaC_Qa3MTHiLCf9BrcxMeIsJyKYI9XlANsk0MLTHWeTsB5OquG6koPzhc9ZfwkHpkaO&_nc_ohc=QX-LVnLAPzMAX_QBK15&_nc_ht=scontent.ftij2-1.fna&oh=00_AfDUmnuTcFUd270BkcNZdalrBWtjMi98IUgdP3TmTMLVbA&oe=65629643">
              </div>
 
         <!-- Imagen 5 -->
@@ -222,12 +222,10 @@
 
         <!-- Imagen 6 -->
         <div class="photo">
-             <img src="https://scontent.fcxl1-1.fna.fbcdn.net/v/t39.30808-6/338811553_914349659767506_843347055551871054_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGTAkYfDTmSBVYo3j3f5Nb-uzUkLVInjiO7NSQtUieOI6zhhUERXF82KkR6l75oHIxtpYptibYSUO2gAwURH1g7&_nc_ohc=53dlnwzqK7AAX9vDWEa&_nc_ht=scontent.fcxl1-1.fna&oh=00_AfB9ecxUIWoxLVRVEoF5Np9poq6jQHalQyRH2REWP9iq7g&oe=655B8978">
+             <img src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/338811553_914349659767506_843347055551871054_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGTAkYfDTmSBVYo3j3f5Nb-uzUkLVInjiO7NSQtUieOI6zhhUERXF82KkR6l75oHIxtpYptibYSUO2gAwURH1g7&_nc_ohc=HW5745c9LXcAX_2MLoc&_nc_ht=scontent.ftij2-1.fna&oh=00_AfALgNDD0hIOxzrGHH40Ztqv6WO8c1iXO83DUXpdOQuPRA&oe=65617838">
              </div>
         </div>
-
-
-
+        
         <div class="bank-info">
             <h2>Información de cuenta bancaria</h2>
             <p>Banco: Banco Santander (México) S.A</p>
